for branch purpose

--- a/babhu2.html
+++ b/babhu2.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <p>this is my new paragraph</p>
+    </div>
 </body>
 </html>
-<div>
-    hello this a new paratgraph in the local repo
-    <div>
-        <p> this is my new para</p>
-    </div>
-</div>
